--- a/bower.json
+++ b/bower.json
@@ -1,18 +1,24 @@
 {
-  "name": "fumble-mania-web-frontend",
-  "version": "0.0.0",
-  "dependencies": {
-    "angular": "^1.3.0",
-    "angular-animate": "^1.3.0",
-    "angular-cookies": "^1.3.0",
-    "angular-resource": "^1.3.0",
-    "angular-route": "^1.3.0",
-    "angular-sanitize": "^1.3.0",
-    "angular-touch": "^1.3.0"
-  },
-  "devDependencies": {
-    "angular-mocks": "^1.3.0"
-  },
-  "appPath": "app",
-  "moduleName": "fumbleManiaWebFrontendApp"
+    "name": "fumble-mania-web-frontend",
+    "version": "0.0.0",
+    "dependencies": {
+        "angular": "^1.3.0",
+        "angular-animate": "^1.3.0",
+        "angular-cookies": "^1.3.0",
+        "angular-resource": "^1.3.0",
+        "angular-route": "^1.3.0",
+        "angular-sanitize": "^1.3.0",
+        "angular-touch": "^1.3.0",
+        "oauth-ng": "~0.4.2",
+        "materialize": "~0.97.0",
+        "angular-materialize": "*"
+    },
+    "devDependencies": {
+        "angular-mocks": "^1.3.0"
+    },
+    "appPath": "app",
+    "moduleName": "fumbleMania",
+    "resolutions": {
+        "angular": "1.4.3"
+    }
 }
