--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "angular-materialize": "*",
     "angular-jwt": "~0.0.9",
     "materialize": "~0.97.0",
-    "restangular": "1.5.*"
+    "restangular": "1.5.*",
+    "angular-translate": "~2.7.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
